--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "classic game BattleShip with Test Driven Development practice",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "webpack server";
   },
   "type": "module",
   "repository": {
@@ -19,6 +20,14 @@
   "homepage": "https://github.com/Essoh21/battleship#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
-    "jest": "^29.3.1"
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
