--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "webpack server";
+    "dev": "webpack server"
   },
-  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Essoh21/battleship.git"
